--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,109 @@
+// #container {
+//   text-align: center;
+
+//   position: absolute;
+//   left: 0;
+//   right: 0;
+//   top: 50%;
+//   transform: translateY(-50%);
+// }
+
+// #container strong {
+//   font-size: 20px;
+//   line-height: 26px;
+// }
+
+// #container p {
+//   font-size: 16px;
+//   line-height: 22px;
+
+//   color: #8c8c8c;
+
+//   margin: 0;
+// }
+
+// #container a {
+//   text-decoration: none;
+// }
+
+@font-face {
+  font-family: berseck;
+  src: url('../../assets/fonts/BerkshireSwash-Regular.ttf');
+}
+
+i {
+  font-family: berseck;
+}
+
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
   margin: 0;
+
+  .img-ctn {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(255, 219, 190, 0.842);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+    img {
+      transform: scale(0.75);
+    }
+  }
 }
 
-#container a {
-  text-decoration: none;
+#logotop {
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.top {
+  display: flex;
+  align-items: center;
+}
+
+.list {
+  transform: translateY(-20px);
+  background-color: #fff;
+  padding-top: 20px;
+
+  .list-item {
+    display: flex;
+    align-items: center;
+    border-bottom: solid 0.5px #ccc;
+    margin: 25px;
+    padding-bottom: 10px;
+
+    img {
+      width: 55%;
+      height: 150px;
+    }
+
+    div {
+      width: 45%;
+
+      h1, h3 {
+        text-align: center;
+      }
+
+      h3 { 
+        color: rgb(44, 126, 177);
+      }
+
+      h1 {
+        font-weight: 900;
+        color: olive;
+      }
+    }
+  }
+}
+
+h2 {
+  text-align: center;
+  text-shadow: -1px -1px 3px #999;
+  color: midnightblue;
 }
